--- a/springBootDemo/src/main/resources/application.properties
+++ b/springBootDemo/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 
+
+spring.datasource.url=jdbc:mysql://localhost:3306/springBootDemo
+spring.datasource.username=root
+spring.datasource.password=Rupesh@986
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql: true
+
+
